--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
           <img src="http://dominio.com/imagen.jpg" alt="paisaje">          
         </div>
       </article>      
+
+      <article>
+        <h2>CONTENIDO SECUNDARIO</h2>
+        <p>Este es el contenido principal de mi web</p>
+        <div>
+          <p>Aquí tenéis una imagen.</p>
+          <img src="http://dominio.com/imagen.jpg" alt="paisaje">          
+        </div>
+      </article>     
     </section>
     <aside>
       <h3>Banner de publicidad</h3>
