inserte la cabecera

--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
       </article>     
     </section>
     <aside>
-      <h3>Banner de publicidad</h3>
-      <a href="http://dominio-externo.com">
-        <img src="http://dominio.com/banner-publicidad.png" alt="banner de publicidad">
-      </a>
-      <h3>Testimonios</h3>
-      <p>Me gusta mucho esta página.</p>
+      
+      <p>Me gusta mucho esta página. echo en la CABECERA</p>
     </aside>
     <footer>
       <h4>Avisos legales</h4>
